@@ -34,17 +34,13 @@ fi
 ##Perf Plugin
 PA_PLUGIN="opensearch-performance-analyzer"
 
-if [ -d $OPENSEARCH_HOME/plugins/$PA_PLUGIN ]; then
-    chmod 755 $OPENSEARCH_HOME/plugins/$PA_PLUGIN/pa_bin/performance-analyzer-agent
-    chmod 755 $OPENSEARCH_HOME/bin/performance-analyzer-agent-cli
-fi
-
 if ! grep -q '## OpenDistro Performance Analyzer' $OPENSEARCH_HOME/config/jvm.options; then
    CLK_TCK=`/usr/bin/getconf CLK_TCK`
    echo >> $OPENSEARCH_HOME/config/jvm.options
    echo '## OpenDistro Performance Analyzer' >> $OPENSEARCH_HOME/config/jvm.options
    echo "-Dclk.tck=$CLK_TCK" >> $OPENSEARCH_HOME/config/jvm.options
    echo "-Djdk.attach.allowAttachSelf=true" >> $OPENSEARCH_HOME/config/jvm.options
-   echo "-Djava.security.policy=$OPENSEARCH_HOME/plugins/$PA_PLUGIN/pa_config/opensearch_security.policy" >> $OPENSEARCH_HOME/config/jvm.options
+   echo "-Djava.security.policy=$OPENSEARCH_HOME/config/$PA_PLUGIN/opensearch_security.policy" >> $OPENSEARCH_HOME/config/jvm.options
+   echo "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED" >> $OPENSEARCH_HOME/config/jvm.options
 fi
 
